--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="card">
         <h1>Folklore Album</h1>
         <img src="folklore.jpeg" alt="Taylor Swift" width="400">
+        <p>test update</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nemo magni necessitatibus vero est quo ex, blanditiis incidunt sequi itaque obcaecati a accusamus corrupti dolores totam sapiente repellat! Quisquam, voluptas!</p>
         <button id="Folklore">Click Me</button>
     </div>
